--- a/ei3managerweb/pom.xml
+++ b/ei3managerweb/pom.xml
@@ -25,6 +25,11 @@
             <version>${pagehelper.version}</version>
         </dependency>
         <dependency>
+            <groupId>fastdfs_client</groupId>
+            <artifactId>fastdfs_client</artifactId>
+            <version>1.25</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.ibatis</groupId>
             <artifactId>ibatis-core</artifactId>
             <version>3.0</version>
